--- a/Introduction to Data Science Tools.ipynb
+++ b/Introduction to Data Science Tools.ipynb
@@ -17,80 +17,80 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# Introduction to Data Science Tools"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "tags": []
-   },
+   "metadata": {},
    "source": [
-    "This notebook provides insights into various data science tools, languages, and libraries."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "- **Python**: Widely used for data analysis, machine learning.\n",
-    "- **R**: Popular in statistics and data visualization.\n",
-    "- **SQL**: Essential for database management and queries.\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "- **Pandas (Python)**: Data manipulation and analysis.\n",
-    "- **ggplot2 (R)**: Data visualization.\n",
-    "- **TensorFlow (Python)**: Machine learning and neural networks.\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "| Tool          | Description                                |\n",
-    "|---------------|--------------------------------------------|\n",
-    "| Jupyter       | Interactive notebook for code and text.    |\n",
-    "| RStudio       | IDE for R language.                        |\n",
-    "| Tableau       | Data visualization tool.                   |\n"
+    "# Data Science Notebook"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Arithmetic expressions in Python and R are fundamental for basic data operations. Examples include addition, subtraction, multiplication, and division.\n"
+    "Data science is an interdisciplinary field that uses scientific methods, processes, algorithms, and systems to extract knowledge and insights from noisy, structured, and unstructured data."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Objectives\n",
-    "- Understand key data science concepts.\n",
-    "- Learn basic operations in Python/R.\n",
-    "- Get familiar with data science tools and libraries.\n"
+    "Some of the popular languages that Data Scientists use are:\n",
+    "\n",
+    "1. Python\n",
+    "2. R\n",
+    "3. SQL\n",
+    "4. Scala\n",
+    "5. Java\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Some of the commonly used libraries by Data Scientists include:\n",
+    "\n",
+    "1. Pandas\n",
+    "2. Numpy\n",
+    "3. Matplotlib\n",
+    "4. Seaborn\n",
+    "5. Scikit-learn\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "| Tool | Description |\n",
+    "|------|-------------|\n",
+    "| Jupyter | An open-source web application that allows you to create and share documents that contain live code, equations, visualizations, and narrative text. |\n",
+    "| Pandas | A library providing high-performance, easy-to-use data structures and data analysis tools for the Python programming language. |\n",
+    "| Scikit-learn | A simple and efficient tools for data mining and data analysis; built on NumPy, SciPy, and matplotlib. |\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Arithmetic Expression Examples"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Arithmetic expressions in Python and R are fundamental for basic data operations. Examples include addition, subtraction, multiplication, and division."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {
     "tags": []
    },
@@ -99,20 +99,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "15\n",
-      "25\n"
+      "17\n"
      ]
     }
    ],
    "source": [
-    "# Python Example\n",
-    "print(5 * 3)  # Multiplication\n",
-    "print(10 + 15)  # Addition\n"
+    "# Multiply 5 by 3 and add 2\n",
+    "result = 5 * 3 + 2\n",
+    "print(result)  # Output should be 17"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {
     "tags": []
    },
@@ -121,31 +120,36 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "120 minutes is 2.0 hours\n"
+      "3.3333333333333335\n"
      ]
     }
    ],
    "source": [
-    "# Python Example\n",
-    "minutes = 120\n",
+    "# Convert 200 minutes to hours\n",
+    "minutes = 200\n",
     "hours = minutes / 60\n",
-    "print(f\"{minutes} minutes is {hours} hours\")\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "**Author**: Mete Avcı]"
+    "print(hours)  # Output should be 3.33"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[View My Notebook on GitHub](https://github.com/meteeee)"
+    "**Objectives**\n",
+    "\n",
+    "- Understand the basics of Data Science\n",
+    "- Learn about different tools and libraries used in Data Science\n",
+    "- Apply Data Science techniques to real-world problems\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Author\n",
+    "```Mete Avcı```\n",
+    "\n",
+    "``https://github.com/meteeee``"
    ]
   },
   {
